Minor edits in CIStringSet